BK-#0- a few nice fixes: now, when users log in, we won't be nazis about whether they have whitespace before or after their name.  We also won't care about capitalization of their username.  Finally, I squeezed down the buttons on the header a bit more so people will see the help button on even the smallest screens.

--- a/web_container/apache-tomcat-8.0.14/webapps/ROOT/static/css/header.css
+++ b/web_container/apache-tomcat-8.0.14/webapps/ROOT/static/css/header.css
@@ -378,7 +378,7 @@ header #my-favors-container {
 @media all and (max-width: 500px) {
 
   header a span.image {
-    width: 45px;
+    width: 39px;
     height: 30px;
     display: block;
   }
